--- a/Halaman/Pemberitahuan.html
+++ b/Halaman/Pemberitahuan.html
@@ -51,7 +51,7 @@
   </style>
 </head>
 <body>
-<a id="back-link" href="javascript:history.back()"><i class="fas fa-home"></i></i> Kembali</a>
+<a id="back-link" href="http://tokokita-seven.vercel.app/"><i class="fas fa-home"></i></i> Kembali</a>
 <hr>
   <div class="terima-kasih">Terima Kasih!</div>
   
