--- a/Akun/login.html
+++ b/Akun/login.html
@@ -22,19 +22,13 @@
     firebase.initializeApp(firebaseConfig);
   </script>
 
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
-
+  <!-- Gaya CSS -->
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background-color: #f4f4f4;
       margin: 0;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
+      padding: 20px;
     }
 
     h2 {
@@ -131,8 +125,8 @@
           console.log('Login successful:', userCredential.user);
           showNotification('Login successful!', true);
 
-          // Redirect to the next link upon successful login
-          window.location.href = 'next_page.html'; // Replace with the desired link
+          // Redirect to the profile page upon successful login
+          window.location.href = 'https://bit.ly/3tK6lrt';
         })
         .catch((error) => {
           // Handle login error
