--- a/Akun/login.html
+++ b/Akun/login.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="id">
-<head>
-  <!-- Firebase SDK -->
+<head>    
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login!</title>
   <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-firestore.js"></script>
