--- a/Akun/profile.html
+++ b/Akun/profile.html
@@ -233,7 +233,7 @@
     function logout() {
       firebase.auth().signOut().then(() => {
         // Logout berhasil, arahkan ke halaman login
-        window.location.href = 'login.html';
+        window.location.href = 'https://bit.ly/3tK6lrt';
       }).catch((error) => {
         console.error('Logout gagal:', error.message);
       });
