--- a/Akun/login.html
+++ b/Akun/login.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>    
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login!</title>
@@ -94,11 +95,15 @@
         opacity: 1;
       }
     }
+    #back-link {
+    text-decoration: none;
+    color: black;
   </style>
 </head>
 <body>
   <!-- Form Login -->
   <form id="loginForm">
+      <a id="back-link" href="https://bit.ly/3tK6lrt"><i class="fas fas fa-home"></i>Home</a>
     <h2>Login</h2>
 
     <label for="email">Email:</label>
