--- a/Halaman/Pesan.html
+++ b/Halaman/Pesan.html
@@ -323,7 +323,7 @@ document.getElementById('rw').value = userData.rw || '';
                         });
                 } else {
                     // Jika tidak ada pengguna yang masuk, arahkan ke halaman login
-                    window.location.href = 'login.html';
+                    window.location.href = 'https://tokokita-seven.vercel.app/Akun/login.html';
                 }
             });
 
