--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta name="google-site-verification" content="90FH8IYJXqwEllzVc0Ux4TdtNqW5NPpt_AumxpUMc7g" />
+    <meta name="google-site-verification" content="90FH8IYJXqwEllzVc0Ux4TdtNqW5NPpt_AumxpUMc7g" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Toko Kita hni</title>
@@ -203,7 +203,13 @@
       <a href="Akun/login.html">Login</a>
       <a href="Akun/signup.html">Signup</a>
     </div>
-    <h1>Toko bu Eti</h1>
+   <br>
+<div style="display: flex; align-items: center;">
+  <div style="overflow: hidden; border-radius: 50%; width: 50px; height: 50px; margin-left: 50px;">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQj_cL0RBMKKYnfURXOUeeTzU1j8y0CurmeNw&usqp=CAU" alt="" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
+  </div>
+  <h1 style="margin-left: 5px;">Toko bu Eti</h1>
+</div>
     <nav>
       <a href="https://bit.ly/3tK6lrt">
         <i class="fas fa-home"></i> Beranda
