--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
       margin: 0;
       body {
   overflow-x: hidden;
+  
 }
 
     }
 
     header {
-      background-color: #333;
+      background-image: linear-gradient(270deg, #5e6367 0, #415460 25%, #1f4459 50%, #003453 75%, #00264c 100%);
       color: #fff;
       padding: 20px;
       text-align: center;
@@ -54,6 +55,7 @@
     main {
       padding: 20px;
       padding-bottom: 60px;
+      
     }
 
     .produk {
