--- a/Akun/profile.html
+++ b/Akun/profile.html
@@ -43,7 +43,7 @@
     }
 
     #profileInfo {
-      background-color: #fff;
+      background-image: radial-gradient(circle at 50% -20.71%, #cae6ee 0, #cbe6f0 16.67%, #cce5f1 33.33%, #cde5f2 50%, #cee5f3 66.67%, #d0e4f4 83.33%, #d2e3f4 100%);
       padding: 30px;
       border-radius: 8px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -96,7 +96,7 @@
     }
 
     #saveButton {
-      background-color: #4caf50;
+      background-image: radial-gradient(circle at 53.88% 35.51%, #7ba955 0, #69a654 25%, #55a354 50%, #3c9f55 75%, #129c57 100%);
       color: #fff;
       padding: 10px 15px;
       border: none;
@@ -105,7 +105,7 @@
     }
 
     #saveButton:hover {
-      background-color: #45a049;
+      background-image: radial-gradient(circle at 53.88% 35.51%, #7ba955 0, #69a654 25%, #55a354 50%, #3c9f55 75%, #129c57 100%);
     }
     @keyframes spin {
   0% { transform: rotate(0deg); }
@@ -134,7 +134,7 @@
       top: 0;
       left: 0;
       width: 100%;
-      background-color: #fff;
+      background-image: radial-gradient(circle at 50% -20.71%, #cae6ee 0, #cbe6f0 16.67%, #cce5f1 33.33%, #cde5f2 50%, #cee5f3 66.67%, #d0e4f4 83.33%, #d2e3f4 100%);
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       padding: 10px;
       display: flex;
