--- a/index.html
+++ b/index.html
@@ -230,11 +230,12 @@
       <a href="Akun/signup.html">Signup</a>
     </div>
    <br>
-<div style="display: flex; align-items: center;">
-  <div style="overflow: hidden; border-radius: 50%; width: 50px; height: 50px; margin-left: 50px;">
+<div style="display: flex; align-items: center; justify-content: center;">
+  <!-- Sisipkan elemen-elemen anak di sini -->
+  <div style="overflow: hidden; border-radius: 50%; width: 50px; height: 50px;">
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQj_cL0RBMKKYnfURXOUeeTzU1j8y0CurmeNw&usqp=CAU" alt="" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
   </div>
-  <h1 style="margin-left: 5px;">Toko bu Eti</h1>
+  <h1 style="margin-left: 2px;">Toko bu Eti</h1>
 </div>
  <div id="userInfoCard">
          <img id="profilePicture" style="overflow: hidden; border-radius: 50%; width: 50px; height: 50px; margin-left: 0px;" alt="">
