--- a/Member/indexmember.html
+++ b/Member/indexmember.html
@@ -230,11 +230,12 @@
       <a href="https://tokokita-seven.vercel.app/Akun/signup.html">Signup</a>
     </div>
    <br>
-<div style="display: flex; align-items: center;">
-  <div style="overflow: hidden; border-radius: 50%; width: 50px; height: 50px; margin-left: 50px;">
+<div style="display: flex; align-items: center; justify-content: center;">
+  <!-- Sisipkan elemen-elemen anak di sini -->
+  <div style="overflow: hidden; border-radius: 50%; width: 50px; height: 50px;">
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQj_cL0RBMKKYnfURXOUeeTzU1j8y0CurmeNw&usqp=CAU" alt="" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
   </div>
-  <h1 style="margin-left: 5px;">Toko bu Eti</h1>
+  <h1 style="margin-left: 2px;">Toko bu Eti</h1>
 </div>
  <div id="userInfoCard">
          <img id="profilePicture" style="overflow: hidden; border-radius: 50%; width: 50px; height: 50px; margin-left: 0px;" alt="">
@@ -245,7 +246,7 @@
       <a href="https://bit.ly/3tK6lrt">
         <i class="fas fa-home"></i> Beranda
       </a>
-      <a href="Akun/profile.html">
+      <a href="https://tokokita-seven.vercel.app/Akun/profile.html">
         <i class="fas fa-user"></i> Profil
       </a>
       <a href="https://wa.me/6283174042483">
@@ -396,9 +397,7 @@ font-weight: bold; color: #2c3030;">Kopi 7 Elemen - <i>wilayah 3(100/25)</i></p>
     </section>
     <br>
     <section class="keranjang">
-      <a href="Halaman/keranjang
-
-.html">
+      <a href="https://tokokita-seven.vercel.app/Halaman/keranjang.html">
         <i class="fas fa-shopping-cart"></i><span id="cart-count">0</span>
       </a>
     </section>
