--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <meta name="google-site-verification" content="90FH8IYJXqwEllzVc0Ux4TdtNqW5NPpt_AumxpUMc7g" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
