--- a/Member/indexmember.html
+++ b/Member/indexmember.html
@@ -254,7 +254,7 @@
   <p id="userStatus"></p>  
 </div>
     <nav>
-      <a href="https://bit.ly/3tK6lrt">
+      <a href="indexmember.html">
         <i class="fas fa-home"></i> Beranda
       </a>
       <a href="https://tokokita-seven.vercel.app/Akun/profile.html">
@@ -403,7 +403,7 @@ font-weight: bold; color: #2c3030;">Kopi 7 Elemen - <i>wilayah 3(100/25)</i></p>
         <h3>Minyak herba sinergi</h3>
         <p>Secara tradisional digunakan sebagai minyak gosok dan minyak urut untuk membantu meredakan pegal linu dan nyeri sendi, serta luka memar.</p>
         <p>Rp 30.000 <i>Wilayah 1, 2, 3(30/10)</i></p>
-        <button onclick="addToCart('Minyak herba sinergi Wilayah 1, 2, 3(30/10)', 45000, 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRh8yDpCBIXpoo4o2GUbLCEACFU_2a5Ta-Qpg&usqp=CAU')">Tambah ke Keranjang</button>
+        <button onclick="addToCart('Minyak herba sinergi Wilayah 1, 2, 3(30/10)', 30000, 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRh8yDpCBIXpoo4o2GUbLCEACFU_2a5Ta-Qpg&usqp=CAU')">Tambah ke Keranjang</button>
       </div>
     </section>
     <br>
