--- a/index.html
+++ b/index.html
@@ -284,35 +284,30 @@
         <h3>Kopi 7 Elemen</h3>
         <p>Kopi 7 Elemen adalah minuman yang terdiri dari kopi dengan 7 elemen tanaman: biji, akar, batang, kulit, daun, bunga, dan buah.</p>
         <p>Rp 60.000 <i>wilayah 1&2 (50/13)</i></p>
-        <button onclick="addToCart('Kopi 7 Elemen wilayah 1&2 (50/13)', 60000, 'https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcTCynsAUaxOViUnFKb10v1YD5i4WLot24c-sbecgnq7tfBX7o0&usqp=CAc')">Tambah ke Keranjang</button>
+        <button onclick="addToCart('Kopi 7 Elemen (isi 10) wilayah 1&2 (50/13)', 60000, 'https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcTCynsAUaxOViUnFKb10v1YD5i4WLot24c-sbecgnq7tfBX7o0&usqp=CAc')">Tambah ke Keranjang</button>
         <br>
         <hr>
         <br>
         <!-- Button to show variants -->
         <button onclick="toggleVariants('produk1')">Tampilkan Varian</button>
         <!-- Variants card (initially hidden) -->
-        <div id="variantsCard_produk1" style="display:none; border: 2px solid #080808da; padding: 10px; margin-top: 10px; background-color: #ffffff;">
+        <div id="variantsCard_produk1" style="display:none; border: 2px solid #080808da;p padding: 10px; margin-top: 10px; background-color: #ffffff;">
           <!-- Variant 1 -->
           <div style="border: 1px solid #ddd; border-radius: 5px; padding: 10px; margin-bottom: 10px;">
             <p>Pouch 10 sachet x 23gr</p>
             <hr>
             <p style="font-weight: bold; color: #2c3030;">Kopi 7 Elemen - <i>wilayah 3(60/13)</i></p>
             <p style="color: #555;">Harga: Rp 70.000</p>
-            <button onclick="addToCart('Kopi 7 Elemen wilayah 3(60/13)', 70000, 'https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcTCynsAUaxOViUnFKb10v1YD5i4WLot24c-sbecgnq7tfBX7o0&usqp=CAc')">Tambah ke Keranjang</button>
+            <button onclick="addToCart('Kopi 7 Elemen (isi 10) wilayah  3(60/13)', 70000, 'https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcTCynsAUaxOViUnFKb10v1YD5i4WLot24c-sbecgnq7tfBX7o0&usqp=CAc')">Tambah ke Keranjang</button>
           </div>
-          <!-- Variant 2 -->
-          <div style="border: 1px solid #ddd; border-radius: 5px; padding: 10px; margin-bottom: 10px;">
-            <p style="font-weight: bold; color: #2c3030;">Kopi 7 Elemen - <i>wilayah 4(90/13)</i></p>
-            <p style="color: #555;">Harga: Rp 100.000</p>
-            <button onclick="addToCart('Kopi 7 Elemen wilayah 4(90/13)', 100000, 'https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcTCynsAUaxOViUnFKb10v1YD5i4WLot24c-sbecgnq7tfBX7o0&usqp=CAc')">Tambah ke Keranjang</button>
-          </div>
+          
           <!-- Variant 3 -->
           <div style="border: 1px solid #ddd; border-radius: 5px; padding: 10px;">
             <p>Pouch 20 sachet x 23gr</p>
             <hr>
             <p style="font-weight: bold; color: #2c3030;">Kopi 7 Elemen - <i>wilayah 1&2(90/25)</i></p>
             <p style="color: #555;">Harga: Rp 110.000</p>
-            <button onclick="addToCart('Kopi 7 Elemen wilayah 1&2(90/25)', 110000, 'https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcTCynsAUaxOViUnFKb10v1YD5i4WLot24c-sbecgnq7tfBX7o0&usqp=CAc')">Tambah ke Keranjang</button>
+            <button onclick="addToCart('Kopi 7 Elemen (isi 20) wilayah 1&2(90/25)', 110000, 'https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcTCynsAUaxOViUnFKb10v1YD5i4WLot24c-sbecgnq7tfBX7o0&usqp=CAc')">Tambah ke Keranjang</button>
           </div>
           <!-- Variant 4 -->
           <div style="border: 1px solid #ddd; border-radius: 5px; padding: 10px;">
@@ -320,14 +315,8 @@
 
 font-weight: bold; color: #2c3030;">Kopi 7 Elemen - <i>wilayah 3(100/25)</i></p>
             <p style="color: #555;">Harga: Rp 120.000</p>
-            <button onclick="addToCart('Kopi 7 Elemen wilayah 3(100/25)', 120000, 'https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcTCynsAUaxOViUnFKb10v1YD5i4WLot24c-sbecgnq7tfBX7o0&usqp=CAc')">Tambah ke Keranjang</button>
-          </div>
-          <!-- Variant 5 -->
-          <div style="border: 1px solid #ddd; border-radius: 5px; padding: 10px;">
-            <p style="font-weight: bold; color: #2c3030;">Kopi 7 Elemen - <i>wilayah 4(130/25)</i></p>
-            <p style="color: #555;">Harga: Rp 150.000</p>
-            <button onclick="addToCart('Kopi 7 Elemen wilayah 4(130/25)', 150000, 'https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcTCynsAUaxOViUnFKb10v1YD5i4WLot24c-sbecgnq7tfBX7o0&usqp=CAc')">Tambah ke Keranjang</button>
-          </div>
+            <button onclick="addToCart('Kopi 7 Elemen (isi 20) wilayah 3(100/25)', 120000, 'https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcTCynsAUaxOViUnFKb10v1YD5i4WLot24c-sbecgnq7tfBX7o0&usqp=CAc')">Tambah ke Keranjang</button>
+          </div>         
         </div>
       </div>
 
