--- a/Akun/login.html
+++ b/Akun/login.html
@@ -26,11 +26,13 @@
     }
 
     form {
-      background-color: #fff;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    }
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  max-width: 300px;
+  margin: 150px auto 0; /* Menambahkan margin atas sebanyak 50px */
+}
 
     label {
       display: block;
