--- a/Akun/pengaturan.html
+++ b/Akun/pengaturan.html
@@ -8,102 +8,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pengaturan</title>
-  <script src="https://kosred.com/a/klttyp.js"></script> 
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f4f4f4;
-      margin: 0;
-      padding: 0px;
-    }
-
-    header {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      background-color: #fff;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-      padding: 10px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    header h1 {
-      margin: 0;
-    }
-
-    #backButton {
-      background-color: #3498db;
-      color: #fff;
-      padding: 8px 12px;
-      border: none;
-      font-size: 16px;
-      border-radius: 5px;
-      margin-right: 10px;
-      cursor: pointer;
-      margin-right: 30px;
-    }
-
-    #backButton:hover {
-      background-color: #2980b9;
-    }
-
-    #settingsContent {
-      margin-top: 80px;
-      padding: 20px;
-      background-color: #fff;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      max-width: 400px;
-      margin-left: auto;
-      margin-right: auto;
-    }
-
-    label {
-      display: block;
-      margin-bottom: 8px;
-    }
-
-    input {
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 16px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      box-sizing: border-box;
-    }
-
-    #saveChangesButton {
-      background-color: #4caf50;
-      color: #fff;
-      padding: 12px;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-
-    #saveChangesButton:hover {
-      background-color: #45a049;
-    }
-
-    #floatingMessage {
-      position: fixed;
-      top: 10px;
-      left: 50%;
-      transform: translateX(-50%);
-      padding: 10px;
-      background-color: #4caf50;
-      color: #fff;
-      border-radius: 5px;
-      display: none;
-    }
-
-    #floatingMessage.error {
-      background-color: #f44336;
-    }
-  </style>
+ <link rel="stylesheet" href="https://kosred.com/a/thqiiu.css">
+  
 </head>
 
 <body>
@@ -134,83 +40,8 @@
   </div>
 
   <div id="floatingMessage"></div>
-
-  <script>
-    const firestore = firebase.firestore();
-
-    // Fungsi untuk kembali ke halaman sebelumnya
-    function goBack() {
-      window.history.back();
-    }
-
-    // Fungsi untuk menyimpan perubahan (tambahkan logika sesuai kebutuhan)
-    function saveChanges() {
-      const currentPasswordInput = document.getElementById('currentPassword');
-      const newPasswordInput = document.getElementById('newPassword');
-      const newUsernameInput = document.getElementById('newUsername');
-      const floatingMessage = document.getElementById('floatingMessage');
-
-      const currentPassword = currentPasswordInput.value;
-      const newPassword = newPasswordInput.value;
-      const newUsername = newUsernameInput.value;
-
-      const user = firebase.auth().currentUser;
-      const credential = firebase.auth.EmailAuthProvider.credential(user.email, currentPassword);
-
-      // Reautentikasi pengguna
-      user.reauthenticateWithCredential(credential).then(() => {
-        // Perbarui nama pengguna jika ada perubahan
-        if (newUsername && newUsername !== user.displayName) {
-          user.updateProfile({
-            displayName: newUsername
-          })
-          .then(() => {
-            floatingMessage.textContent = 'Nama pengguna berhasil diperbarui';
-            floatingMessage.classList.remove('error');
-            floatingMessage.style.display = 'block';
-          })
-          .catch((error) => {
-            floatingMessage.textContent = 'Gagal memperbarui nama pengguna';
-            floatingMessage.classList.add('error');
-            floatingMessage.style.display = 'block';
-            console.error('Error updating username:', error);
-          });
-        }
-
-        // Perbarui sandi jika ada perubahan
-        if (newPassword) {
-          user.updatePassword(newPassword)
-            .then(() => {
-              floatingMessage.textContent = 'Sandi berhasil diperbarui';
-              floatingMessage.classList.remove('error');
-              floatingMessage.style.display = 'block';
-            })
-            .catch((error) => {
-              floatingMessage.textContent = 'Gagal memperbarui sandi';
-              floatingMessage.classList.add('error');
-              floatingMessage.style.display = 'block';
-              console.error('Error updating password:', error);
-            });
-        }
-      }).catch((error) => {
-        floatingMessage.textContent = 'Gagal reauthenticating pengguna';
-        floatingMessage.classList.add('error');
-        floatingMessage.style.display = 'block';
-        console.error('Error reauthenticating user:', error);
-      });
-    }
-
-    // Mengecek status masuk pengguna secara terus-menerus
-    firebase.auth().onAuthStateChanged(function(user) {
-      const currentUsernameElement = document.getElementById('currentUsername');
-
-      if (user) {
-        currentUsernameElement.textContent = `Nama Pengguna: ${user.displayName || 'Belum diatur'}`;
-      } else {
-        // Redirect to the login page if the user is not authenticated
-        window.location.href = 'profile.html';
-      }
-    });
-  </script>
+ <script src="https://kosred.com/a/klttyp.js"></script> 
+  <script src="https://kosred.com/a/kecjzg.js">
+      </script>
 </body>
 </html>
